--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css"
     />
-    <title>Vite + React</title>
+    <title>Dragon News</title>
   </head>
   <body>
     <div id="root"></div>
